--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,21 @@
                 <version>5.4.18.Final</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>5.2.3.RELEASE</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-core</artifactId>
+                <version>5.3.2.RELEASE</version>
+            </dependency>
+
+
         </dependencies>
 
     </dependencyManagement>
