--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
                 <version>5.3.2.RELEASE</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>5.2.4.RELEASE</version>
+            </dependency>
+
 
         </dependencies>
 
