--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,12 @@
                 <version>5.4.18.Final</version>
             </dependency>
 
-            <!-- https://mvnrepository.com/artifact/org.springframework/spring-web
+            <!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
-                <version>5.2.3.RELEASE</version>
-            </dependency>-->
+                <version>5.2.4.RELEASE</version>
+            </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
             <dependency>
