trying to mitigate vulnerability at org.apache.tomcat.embed:tomcat-embed-core by overriding spring-boot-starter-parent (2.3.1) version to: 9.0.37

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
                 <version>5.2.4.RELEASE</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-core -->
+            <dependency>
+                <groupId>org.apache.tomcat.embed</groupId>
+                <artifactId>tomcat-embed-core</artifactId>
+                <version>9.0.37</version>
+            </dependency>
 
         </dependencies>
 
